--- a/Act01_GuessingGame/style.css
+++ b/Act01_GuessingGame/style.css
@@ -1,32 +1,111 @@
-.wordleBoard {
-    justify-content: center;
-    max-width: 500px;
-    height: 100%;
-    margin: 1% auto;
-}
-
-.wordleRow {
-    display: grid;
-    grid-template-columns: repeat(5, 75px);
-    margin: 10px auto;
-    justify-content: center;
-}
-
-.gridItem {
-    color: whitesmoke;
-    border-color: gray;
-    border-style: solid;
-    border-width: 1.5px;
-    font-size: xx-large;
-    line-height:  65px;
-    text-align: center;
-    height: 65px;
-    width: 65px;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: white;
 }
 
 body {
-    background-color: black;
-    color: whitesmoke;
-    font: Sans-serif;
-    font-weight: bolder;
+    background: linear-gradient(#1354A5 0%, #041832 33.33%, #041832 66.67%, #01080E 100%);
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+body::before {
+    background-image: url("img/code.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+}
+
+.container {
+    width: 1200px;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 24px;
+    border: 1px solid #1875E8;
+    box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
+    background-image: url("img/Ruido.png");
+    background-size: 100% 100%;
+    position: relative;
+}
+
+
+.container_content {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+}
+
+.container_info {
+    flex: 1;
+    padding: 3rem;
+}
+
+.container_button {
+    border-radius: 16px;
+    background: #1875E8;
+    padding: 16px 24px;
+    width: 100%;
+    font-size: 24px;
+    font-weight: 700;
+    border: none;
+    margin-top: 2rem;
+}
+
+.container_button:disabled {
+    background: #898989;
+}
+
+.container_text {
+    margin: 16px 0 16px 0;
+}
+
+.container__texto-azul {
+    color: #1875E8;
+}
+
+.container__input {
+    width: 100%;
+    height: 72px;
+    border-radius: 16px;
+    background-color: #FFF;
+    border: none;
+    color: #1875E8;
+    padding: 2rem;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+}
+
+.container_buttons {
+    display: flex;
+    gap: 2em;
+}
+
+h1 {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 72px;
+    padding-bottom: 3rem;
+}
+
+p,
+button {
+    font-family: 'Inter', sans-serif;
+}
+
+.texto__parrafo {
+    font-size: 32px;
+    font-weight: 400;
 }
